Animal module és component létrehozása, service implementálása

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                     [routerLinkActiveOptions]="{exact:true}">Felhasználók</a>
                 </li>
                 <li>
-                    <a [routerLink]="['']"
+                    <a [routerLink]="['animals']"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">Állatok</a>
                 </li>
