--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+<div class='stage'>
   <div class='container'>
     <navbar></navbar>
     <router-outlet></router-outlet>
