--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <div class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand">Állatmenhely</a>
+            <a class="navbar-brand" 
+            [routerLink]="['animals']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact:true}">Állatmenhely</a>
         </div>
 
         <div class="collapse navbar-collapse">
@@ -22,14 +25,19 @@
                     [routerLinkActiveOptions]="{exact:true}">Igénylések</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <li *ngIf="!isAuthenticated()">
                     <a [routerLink]="['login']"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">Belépés</a>
                 </li>
+                <li *ngIf="!isAuthenticated()">
+                    <a [routerLink]="['register']"
+                    routerLinkActive="active"
+                    [routerLinkActiveOptions]="{exact:true}">Regisztráció</a>
+                </li>
                 <li *ngIf="isAuthenticated()">
-                    <a [routerLink]="['login']"
+                    <a [routerLink]="['user', getSelf()]"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">{{getUserName()}}</a>
                 </li>
