Állatokhoz admin lista és módosító oldal

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
                     [routerLinkActiveOptions]="{exact:true}">Felhasználók</a>
                 </li>
                 <li>
-                    <a [routerLink]="['animals']"
+                    <a [routerLink]="['animals','basic']"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">Állatok</a>
                 </li>
