--- a/src/app/users/user-list.component.html
+++ b/src/app/users/user-list.component.html
@@ -13,6 +13,7 @@
                     <td>Cím</td>
                     <td>E-mail</td>
                     <td>Telefon</td>
+                    <td>Jogkör</td>
                     <td>Lehetőségek</td>
                 </thead>
                 <tbody>
@@ -24,6 +25,7 @@
                         <td>{{user?.address}}</td>
                         <td>{{user?.emailAddress}}</td>
                         <td>{{user?.phoneNumber}}</td>
+                        <td>{{user?.role}}</td>
                         <td>
                             <button class="btn btn-primary" (click)="openUser(user.id)">
                                 <i class="fa fa-pencil"></i>
