--- a/src/app/animals/animalcard/animalcard.component.html
+++ b/src/app/animals/animalcard/animalcard.component.html
@@ -12,4 +12,7 @@
         {{animal?.length}} cm<br>
         {{animal?.description}}<br>
     </div>
+    <div>
+        <button class="btn" (click)="openAnimal(animal.id)">Részletek</button>
+    </div>
 </div>
