--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -20,7 +20,7 @@
                     [routerLinkActiveOptions]="{exact:true}">Állatok</a>
                 </li>
                 <li>
-                    <a [routerLink]="['']"
+                    <a [routerLink]="['applies']"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact:true}">Igénylések</a>
                 </li>
