--- a/src/app/animals/animal-details.component.html
+++ b/src/app/animals/animal-details.component.html
@@ -7,7 +7,10 @@
         </div>
         <div class="form-group">
             <label for="sex">Neme</label>
-            <input class="form-control form-part" formControlName="sex">
+            <select class="form-control form-part" formControlName="sex">
+                <option value="0">Fiú</option>
+                <option value="1">Lány</option>
+            </select>
         </div>
         <div class="form-group">
             <label for="race">Fajta</label>
@@ -15,7 +18,14 @@
         </div>
         <div class="form-group">
             <label for="raceType">Fajtípus</label>
-            <input class="form-control form-part" formControlName="raceType">
+            <select class="form-control form-part" formControlName="raceType">
+                <option value="0">Emlős</option>
+                <option value="1">Madár</option>
+                <option value="2">Rágcsáló</option>
+                <option value="3">Hüllő</option>
+                <option value="4">Kétéltű</option>
+                <option value="5">Vízi</option>
+            </select>
         </div>
         <div class="form-group">
             <label for="birthDate">Születési Dátum</label>
@@ -26,19 +36,19 @@
             <input type="date" class="form-control form-date" formControlName="admissionDate">
         </div>
         <div class="form-group">
-            <label for="weight">Súly</label>
+            <label for="weight">Súly (kg)</label>
             <input class="form-control form-numeric" formControlName="weight">
         </div>
         <div class="form-group">
-            <label for="width">Szélesség</label>
+            <label for="width">Szélesség (cm)</label>
             <input class="form-control form-numeric" formControlName="width">
         </div>
         <div class="form-group">
-            <label for="height">Magasság</label>
+            <label for="height">Magasság (cm)</label>
             <input class="form-control form-numeric" formControlName="height">
         </div>
         <div class="form-group">
-            <label for="length">Hossz</label>
+            <label for="length">Hossz (cm)</label>
             <input class="form-control form-numeric" formControlName="length">
         </div>
         <div class="form-group form-part">
@@ -47,7 +57,12 @@
         </div>  
         <div class="form-group">
             <label for="classification">Tulajdonság</label>
-            <input class="form-control form-part" formControlName="classification">
+            <select class="form-control form-part" formControlName="classification">
+                <option value="0">Szelíd</option>
+                <option value="1">Félős</option>
+                <option value="2">Harapós</option>
+                <option value="3">Lusta</option>
+            </select>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary"
