--- a/src/app/animals/animalcard/animalcard.component.css
+++ b/src/app/animals/animalcard/animalcard.component.css
@@ -1,6 +1,6 @@
 .card-container {
     float: left;
-    width: 80%;
+    width: 90%;
     border-color: blue;
     border-width: 2px;
     border-style: solid;
@@ -15,4 +15,14 @@
 .card-content {
     padding: 8px;
     font-size: 10pt;
+}
+
+.table-header {
+    padding-right: 20px;
+}
+
+.btn {
+    margin: 12px;
+    float: right;
+    border: 1px solid;
 }
