--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,14 @@
 .container {
     min-height: 100%;
     height: auto !important;
-    height: 100;
+    height: 100%;
     width: 95%;
     margin: auto;
 }
 
 .stage {
-    height: 2000px;
+    min-height:100vh;
+    height: auto;
     background-color: rgba(0, 204, 255, 0.774);
 }
 
