--- a/src/app/animals/animalcard/animalcard.component.html
+++ b/src/app/animals/animalcard/animalcard.component.html
@@ -1,4 +1,7 @@
 <div class='card-container'>
+    <div class="image-container">
+        <img [attr.src]='image' class="image-class" alt=""/>
+    </div>
     <div class='card-header'>
         {{animal?.name}}
     </div>
