--- a/src/app/animals/animal-details.component.html
+++ b/src/app/animals/animal-details.component.html
@@ -64,6 +64,22 @@
                 <option value="3">Lusta</option>
             </select>
         </div>
+        <div class="form-group">  
+            <input class="btn" type="file" multiple (change)="fileChange(input)" #input />
+          </div>
+        <table>
+            <tr>
+                <td *ngFor="let file_src of file_srcs" style="padding: 6px;">
+                    <button class="btn btn-primary">
+                        <i class="fa fa-times"></i>
+                    </button>
+                    <img [attr.src]='file_src' alt=""/>
+                </td>
+            </tr>
+        </table>
+        <!-- <div *ngFor="let file_src of file_srcs">  
+            <img [attr.src]='file_src' alt=""/>
+        </div> -->
         <div class="form-group">
             <button type="submit" class="btn btn-primary"
             [disabled]="!animalForm.valid">Mentés</button>
