--- a/src/app/animals/animalcard/animalcard.component.css
+++ b/src/app/animals/animalcard/animalcard.component.css
@@ -9,7 +9,8 @@
 
 .card-header {
     padding: 8px;
-    font-size: 14pt;
+    font-size: 18pt;
+    font-weight: bold;
 }
 
 .card-content {
@@ -18,11 +19,26 @@
 }
 
 .table-header {
+    padding-left: 20px;
     padding-right: 20px;
+    width: 150px;
+    font-size: 10pt;
 }
 
 .btn {
     margin: 12px;
     float: right;
     border: 1px solid;
+}
+
+.image-container {
+    margin: 5px 5px 5px 5px;
+    width: 250px;
+    height: 250px;
+    float: left;
+}
+
+.image-class {
+    display: block;
+    margin: auto;
 }
