--- a/src/app/application/application-details.component.html
+++ b/src/app/application/application-details.component.html
@@ -24,5 +24,5 @@
         </tbody>
         
     </table>
-    <study-template [studies]="studies"></study-template>
+    <study-template [studies]="studies" [applyId]="id"></study-template>
 </div>
