--- a/src/app/users/user-details.component.html
+++ b/src/app/users/user-details.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
             <label for="birthdate">Dátum</label>
-            <input type="date" class="form-control" formControlName="birthdate">
+            <input type="date" min="1900-01-01" class="form-control" formControlName="birthdate">
         </div>
         <div class="form-group">
             <label for="emailAddress">Email</label>
