--- a/src/app/animals/animal.component.css
+++ b/src/app/animals/animal.component.css
@@ -55,3 +55,8 @@ h4 {
     border-color: lightgray;
     margin-bottom: 30px;
 }
+
+.gallery-image {
+    padding-left: 15px;
+    padding-right: 15px;
+}
